--- a/src/App.css
+++ b/src/App.css
@@ -2,71 +2,16 @@
 
 .fColumn{
     margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
 }
 
 .fColumn div{
     padding: 20px 0px;
-    color: white;
 }
 
 .fHead{
     font-weight: bold;
     font-size: 25px;
-    color: white;
-}
-.Fbg1{
- background: url(Images/Fbg1.jpg);
- width: 100%;
- height: 100%;
- 
-}
-.text-center{
-    color: white;
-}
-
-.stickyNav{
-    position: sticky;
-    top: 0px;
-    left: 0px;
-    z-index: 2;
-    box-shadow: 0px -35px 40px 1px black;
-}
-
-.onePageComponent{
-    min-height: calc(100vh - 56px);
-}
-
-.height-inherit{
-    height: inherit;
-}
-
-.body1Column{
-    display: flex;
-    flex-direction: column;
-    font-family: 'Titillium Web', sans-serif;
-    /* align-items: flex-start; */
-}
-
-.body1Column div{
-    padding: 20px 0px;
-    font-size: 30px;
-}
-
-.body1Column p{
-    padding: 15px 0px;
-    font-size: 20px;
-    text-align: justify;
-}
-
-.body1Column a{
-    align-self: flex-start;    
-}
-
-.body1Column img{
-    width: 100%;
+    color: #c76722;
 }
 
 .stickyNav{
