--- a/src/App.css
+++ b/src/App.css
@@ -46,12 +46,42 @@
     padding: 15px 0px;
     font-size: 20px;
     text-align: justify;
+    color: white;
 }
 
 .body1Column a{
     align-self: flex-start;    
 }
 
-.body1Column img{
-    width: 100%;
+.body1Column div div{
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+    padding: 0;
+    border-radius: 5px;
 }
+
+.body1Column img{
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    transition: 1s all ease-in-out;
+}
+
+.body1Column img:hover{    
+    transform: scale(1.5);
+}
+
+@media screen and (max-width: 450px) {
+    
+    .body1Column div div{
+        width: 200px;
+        height: 200px;
+    }
+    
+    .body1Column img{
+        width: 200px;
+        height: 200px;
+    }
+}
+    
