--- a/src/App.css
+++ b/src/App.css
@@ -46,13 +46,11 @@
     color: white;
 }
 .Fbg1{
- background: url(Images/Fbg1.jpg);
+ background: url(./Images/Fbg1.jpg);
  width: 100%;
  height: 100%;
+ color: white;
  
-}
-.text-center{
-    color: rgb(0, 0, 0);
 }
 
 .stickyNav{
