--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sigmar&display=swap');
 
-
-.fColumn{
-    margin-top: 30px;
+.fColumn {
+    /* margin-top: 30px; */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
 
-.fColumn div{
+.fColumn div {
     padding: 20px 0px;
     color: white;
 }
 
-.fHead{
+.fHead {
     font-weight: bold;
     font-size: 25px;
     color: white;
 }
-.Fbg1{
- background: url(./Images/Fbg1.jpg);
- width: 100%;
- height: 100%;
- color: white;
- 
+
+.Fbg1 {
+    background: url(./Images/Fbg1.jpg);
+    width: 100%;
+    height: 100%;
+    color: white;
+
 }
 
-.stickyNav{
+.stickyNav {
     background-color: #854848;
     position: sticky;
     top: 0px;
@@ -35,47 +36,46 @@
     box-shadow: 0px -35px 40px 1px black;
 }
 
-.hoverNavbar:hover{
+.hoverNavbar:hover {
     background-color: #df7878;
     transition: 1s all ease-in-out;
 }
 
-.hoverNavbar{
+.hoverNavbar {
     border-radius: 2px;
 }
 
-.onePageComponent{
+.onePageComponent {
     min-height: calc(100vh - 56px);
 }
 
-.height-inherit{
+.height-inherit {
     height: inherit;
 }
 
-.body1Column{
+.body1Column {
     display: flex;
     flex-direction: column;
     font-family: 'Titillium Web', sans-serif;
     /* align-items: flex-start; */
 }
 
-.body1Column div{
+.body1Column div {
     padding: 20px 0px;
     font-size: 30px;
 }
 
-.body1Column p{
+.body1Column p {
     padding: 15px 0px;
     font-size: 20px;
     text-align: justify;
-    color: white;
 }
 
-.body1Column a{
-    align-self: flex-start;    
+.body1Column a {
+    align-self: flex-start;
 }
 
-.body1Column div div{
+.body1Column div div {
     width: 300px;
     height: 300px;
     overflow: hidden;
@@ -83,34 +83,60 @@
     border-radius: 5px;
 }
 
-.body1Column img{
+.body1Column img {
     width: 300px;
     height: 300px;
     object-fit: cover;
     transition: 1s all ease-in-out;
 }
 
-.body1Column img:hover{    
+.body1Column img:hover {
     transform: scale(1.5);
 }
 
 
-.brightness-mid{
-    filter: brightness(0.6);
+.brightness-mid {
+    filter: brightness(0.75);
+}
+
+.bannerCenter {
+    position: relative;
+    text-align: center;
+    color: white;
+    font-family: 'Sigmar', cursive;
+    font-size: 45px;
+    white-space: nowrap;
+}
+
+.bannerCenter div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-text-stroke: 2px darkred;
+}
+
+.boxShadow {
+    box-shadow: 0px 0px 20px 0px black;
+    border-radius: 10px;
+}
+
+.primary-font{
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 22px;
 }
 
 /* Media Queries */
 
 @media screen and (max-width: 450px) {
-    
-    .body1Column div div{
+
+    .body1Column div div {
         width: 200px;
         height: 200px;
     }
-    
-    .body1Column img{
+
+    .body1Column img {
         width: 200px;
         height: 200px;
     }
 }
-    
