--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@1,700&display=swap');
 
+/* navbar css */
+.custom-Fluid{
+    background-color: #222;
+    padding: 10px 13px;
+    margin: -8px 0px;
+}
+
+.custom-Brand{
+    color: white;
+}
+
+
+.custom-Link{
+    color: white;
+}
+
+
+
+
+
+
+
+
+
+
+/* footer css */
+
 
 .fColumn{
     margin-top: 30px;
@@ -19,29 +46,21 @@
     color: white;
 }
 .Fbg1{
- background: url(./Images/Fbg1.jpg);
+ background: url(Images/Fbg1.jpg);
  width: 100%;
  height: 100%;
- color: white;
  
+}
+.text-center{
+    color: rgb(0, 0, 0);
 }
 
 .stickyNav{
-    background-color: #854848;
     position: sticky;
     top: 0px;
     left: 0px;
     z-index: 2;
     box-shadow: 0px -35px 40px 1px black;
-}
-
-.hoverNavbar:hover{
-    background-color: #df7878;
-    transition: 1s all ease-in-out;
-}
-
-.hoverNavbar{
-    border-radius: 2px;
 }
 
 .onePageComponent{
@@ -94,13 +113,6 @@
     transform: scale(1.5);
 }
 
-
-.brightness-mid{
-    filter: brightness(0.6);
-}
-
-/* Media Queries */
-
 @media screen and (max-width: 450px) {
     
     .body1Column div div{
@@ -114,3 +126,49 @@
     }
 }
     
+
+
+/* about us css */
+
+.A-container{
+    display: block;
+    align-self: center;
+    color: blueviolet;
+
+}
+.A-container h1{
+    color: burlywood;
+    font-size: 2rem;
+}
+.A-container p{
+    align-items: center;
+    color: black;
+}
+
+
+
+
+.A-Grid{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+}
+
+.A-card {
+    flex: 0 0 200px;
+    margin: 10px;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+  } 
+
+  .A-card .A-text {
+    padding: 0 20px 20px;
+  }
+
+  .A-card .A-text > button {
+    background: gray;
+    border: 0;
+    color: white;
+    padding: 10px;
+    width: 100%;
+    }
