--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,18 @@
 /* Navbar css */
 
 .custom-navbar{
-    height: 70px;
+    height: 100px;
 }
 
 .slidingMenu{
-    background-color: white;
+    background-color: rgb(73, 41, 9);
     position: fixed;
-    height: 300px;
+    height: 100vh;
     width: 250px;
     right: -250px;
-    top: 70px;
+    top: 0px;
     transition: 0.5s all ease-out 0s ;
+    z-index: 2;
 }
 
 
@@ -46,7 +47,7 @@
 }
 
 .stickyNav {
-    background-color: #854848;
+    background-color: black;
     position: sticky;
     top: 0px;
     left: 0px;
@@ -55,16 +56,27 @@
 }
 
 .hoverNavbar:hover {
-    background-color: #df7878;
-    transition: 1s all ease-in-out;
+    background-color: #ff9090e3;
+    transition: 0.5s all ease-in-out;
 }
 
 .hoverNavbar {
     border-radius: 2px;
+    padding: 0px 10px;
+}
+
+.hoverNavbar a{
+    color: white;
+}
+
+.hoverNavbar a:hover{
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    color: white;
 }
 
 .onePageComponent {
-    min-height: calc(100vh - 56px);
+    min-height: calc(100vh - 100px);
 }
 
 .height-inherit {
@@ -114,7 +126,7 @@
 
 
 .brightness-mid {
-    filter: brightness(0.75);
+    filter: brightness(0.60);
 }
 
 .bannerCenter {
@@ -122,7 +134,7 @@
     text-align: center;
     color: white;
     font-family: 'Sigmar', cursive;
-    font-size: 45px;
+    font-size: 50px;
     white-space: nowrap;
 }
 
@@ -131,7 +143,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    -webkit-text-stroke: 2px darkred;
+    -webkit-text-stroke: 2px black;
 }
 
 .boxShadow {
@@ -155,6 +167,7 @@
     padding: 5px;
     box-shadow: 1px 3px 4px 1px black;
     transition: 0.5s all ease-in-out;
+    z-index: 2;
 }
 
 .scrollTop:hover{
