--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@
 }
 
 .slidingMenu{
-    background-color: rgb(73, 41, 9);
+    /* background-color: rgb(73, 41, 9); */
+    background: linear-gradient(35deg, #311300, #ba7a3c);
     position: fixed;
     height: 100vh;
     width: 250px;
@@ -36,10 +37,11 @@
     font-weight: bold;
     font-size: 25px;
     color: white;
+    margin: 20px 0px;
 }
 
 .Fbg1 {
-    background: url(./Images/Fbg1.jpg);
+    background: radial-gradient(#373131, #050505);
     width: 100%;
     height: 100%;
     color: white;
@@ -47,17 +49,12 @@
 }
 
 .stickyNav {
-    background-color: black;
+    background: linear-gradient(31deg, #311300, #ba7a3c);
     position: sticky;
     top: 0px;
     left: 0px;
     z-index: 2;
     box-shadow: 0px -35px 40px 1px black;
-}
-
-.hoverNavbar:hover {
-    background-color: #ff9090e3;
-    transition: 0.5s all ease-in-out;
 }
 
 .hoverNavbar {
@@ -67,12 +64,13 @@
 
 .hoverNavbar a{
     color: white;
+    transition: 0.5s all ease-in-out;
 }
 
 .hoverNavbar a:hover{
-    text-decoration: underline;
-    text-underline-offset: 5px;
-    color: white;
+    color: red;
+    /* text-decoration: underline;
+    text-underline-offset: 5px; */
 }
 
 .onePageComponent {
