--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sigmar&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 /* Navbar css */
 
-.custom-navbar{
+.custom-navbar {
     height: 100px;
 }
 
-.slidingMenu{
+.slidingMenu {
     /* background-color: rgb(73, 41, 9); */
     background: linear-gradient(35deg, #311300, #ba7a3c);
     position: fixed;
@@ -16,7 +17,7 @@
     width: 250px;
     right: -250px;
     top: 0px;
-    transition: 0.5s all ease-out 0s ;
+    transition: 0.5s all ease-out 0s;
     z-index: 2;
 }
 
@@ -26,6 +27,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    max-width: 450px;
 }
 
 .fColumn div {
@@ -41,7 +43,7 @@
 }
 
 .Fbg1 {
-    background: radial-gradient(#373131, #050505);
+    background: linear-gradient(181deg, #373131, #050505);
     width: 100%;
     height: 100%;
     color: white;
@@ -62,12 +64,12 @@
     padding: 0px 10px;
 }
 
-.hoverNavbar a{
+.hoverNavbar a {
     color: white;
     transition: 0.5s all ease-in-out;
 }
 
-.hoverNavbar a:hover{
+.hoverNavbar a:hover {
     color: red;
     /* text-decoration: underline;
     text-underline-offset: 5px; */
@@ -149,12 +151,12 @@
     border-radius: 10px;
 }
 
-.primary-font{
+.primary-font {
     font-family: 'Titillium Web', sans-serif;
     font-size: 26px;
 }
 
-.scrollTop{
+.scrollTop {
     cursor: pointer;
     position: fixed;
     right: 15px;
@@ -168,25 +170,102 @@
     z-index: 1;
 }
 
-.scrollTop:hover{
-   background-color: black;
+.scrollTop:hover {
+    background-color: black;
+}
+
+.nameAnimation {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 60px;
+    transform: translate(-50%, -50%);
+    /* font-family: 'Pangolin', cursive; */
+    text-shadow: 4px 4px 4px black;
+    color: white;
+    font-weight: 600;
+}
+
+.nameAnimation div {
+    width: 0;
+    animation: typeWriter 2.5s 1s infinite alternate steps(66);
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: 2px solid black;
+    margin: 0 auto;
+    letter-spacing: .05em;
+
+}
+
+.insta:hover {
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.twitter:hover{
+    color: #00acee;
+}
+
+.facebook:hover{
+    color: #3b5998;
+}
+
+.linkedin:hover{
+    color: #0072b1;
+}
+
+.countUp{
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    align-items: center;
+}
+
+.countUp span{
+    font-weight: bold;
 }
 
 /* Animations */
 
-@keyframes hide{
+@keyframes typeWriter {
+    0% {
+        width: 0;
+    }
+
+    5% {
+        width: 0;
+    }
+
+    80% {
+        width: 100%;
+    }
+
+    90% {
+        width: 100%;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
+@keyframes hide {
     from {
         transform: translateY(calc(100vh - 100px));
     }
+
     to {
         transform: translateY(0);
     }
 }
 
-@keyframes show{
+@keyframes show {
     from {
         transform: translateY(0);
     }
+
     to {
         transform: translateY(calc(100vh - 100px));
     }
@@ -208,8 +287,23 @@
     }
 }
 
+@media screen and (max-width: 600px) {
+    .nameAnimation {
+        font-size: 40px;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .nameAnimation {
+        font-size: 35px;
+    }
+}
+
+@media screen and (max-width: 330px) {
+    .nameAnimation {
+        font-size: 25px;
+    }
+}
 
 
 /* about us css  */
-
-
