--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
 }
 
 .fColumn div {
-    padding: 20px 0px;
+    /* padding: 20px 0px; */
     color: white;
 }
 
@@ -38,7 +38,7 @@
     font-weight: bold;
     font-size: 25px;
     color: white;
-    margin: 20px 0px;
+    margin: 10px 0px;
 }
 
 .Fbg1 {
@@ -148,7 +148,7 @@
     -webkit-text-stroke: 2px black;
 }
 
-.boxShadow {
+.boxShadow, .servicesImg:hover {
     box-shadow: 0px 0px 20px 0px black;
     border-radius: 10px;
 }
@@ -165,7 +165,7 @@
     top: 50px;
     height: 40px;
     border-radius: 100px;
-    background-color: #0a6e0a7a;
+    /* background-color: #0a6e0a7a; */
     padding: 5px;
     box-shadow: 1px 3px 4px 1px black;
     transition: 0.5s all ease-in-out;
@@ -235,6 +235,15 @@
 
 .bg-white{
     background: white;
+}
+
+.servicesImg{
+    transition: 0.5s all ease-in-out;
+    border-radius: 10px;
+}
+
+.servicesImg:hover{
+    transform: scale(1.01);
 }
 
 /* Animations */
