--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap');
 
+/* Root */
+
+*{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+    font-weight: 500;
+}
+
 /* Navbar css */
 
 .slidingMenu {
-    /* background-color: rgb(73, 41, 9); */
     background: linear-gradient(92deg, #332a2a, black);
-    /* background: linear-gradient(35deg, #311300, #ba7a3c); */
     position: fixed;
     height: 100vh;
     width: 55%;
@@ -22,7 +27,6 @@
 
 
 .fColumn {
-    /* margin-top: 30px; */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -30,8 +34,8 @@
 }
 
 .fColumn div {
-    /* padding: 20px 0px; */
     color: white;
+    font-weight: 400;
 }
 
 .fHead {
@@ -51,13 +55,11 @@
 
 .stickyNav {
     background: linear-gradient(180deg, #332a2a, black);
-    /* background: linear-gradient(31deg, #311300, #ba7a3c); */
     position: sticky;
     top: 0px;
     left: 0px;
     z-index: 2;
     box-shadow: 0px -35px 40px 1px black;
-    font-family: 'Baloo Bhai 2', cursive;
     font-size: 30px;
     white-space: nowrap;
 }
@@ -65,13 +67,12 @@
 .hoverNavbar a {
     color: white;
     padding: 10px 25px!important;
+    font-family: 'Baloo Bhai 2', cursive;
 }
 
 .hoverNavbar a:hover {
     color: red;
     transition: 0.5s all ease-in-out;
-    /* text-decoration: underline;
-    text-underline-offset: 5px; */
 }
 
 .onePageComponent {
@@ -85,19 +86,19 @@
 .body1Column {
     display: flex;
     flex-direction: column;
-    font-family: 'Titillium Web', sans-serif;
-    /* align-items: flex-start; */
 }
 
 .body1Column div {
     padding: 20px 0px;
     font-size: 30px;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 .body1Column p {
     padding: 15px 0px;
     font-size: 20px;
     text-align: justify;
+    /* font-family: 'Titillium Web', sans-serif; */
 }
 
 .body1Column a {
@@ -105,6 +106,7 @@
     position: relative;
     top: -20px;
     text-decoration: none;
+    /* font-family: 'Titillium Web', sans-serif; */
 }
 
 .body1Column div div {
@@ -135,7 +137,6 @@
     position: relative;
     text-align: center;
     color: white;
-    font-family: 'Sigmar', cursive;
     font-size: 50px;
     white-space: nowrap;
 }
@@ -165,7 +166,6 @@
     top: 50px;
     height: 40px;
     border-radius: 100px;
-    /* background-color: #0a6e0a7a; */
     padding: 5px;
     box-shadow: 1px 3px 4px 1px black;
     transition: 0.5s all ease-in-out;
@@ -182,7 +182,6 @@
     left: 50%;
     font-size: 60px;
     transform: translate(-50%, -50%);
-    /* font-family: 'Pangolin', cursive; */
     text-shadow: 4px 4px 4px black;
     color: white;
     font-weight: 600;
@@ -196,7 +195,6 @@
     border-right: 2px solid black;
     margin: 0 auto;
     letter-spacing: .05em;
-
 }
 
 .insta:hover {
