--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,11 @@
     font-weight: 500;
 }
 
+a{
+    color: black;
+    text-decoration: none;
+}
+
 /* Navbar css */
 
 .slidingMenu {
@@ -265,6 +270,21 @@
     filter: invert(1);
     width: fit-content;
     cursor: pointer;
+}
+
+.contactBg{
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    filter: brightness(0.5);
+}
+
+.contactBg img{
+    width: 100%;
+    object-fit: cover;
+    height: 100%;
+    object-position: bottom;
 }
 
 /* Animations */
