--- a/src/App.css
+++ b/src/App.css
@@ -163,15 +163,15 @@ a{
     border-radius: 10px;
 }
 
-.boxShadow img{
-    height: 170px;
-    width: 170px;
-}
 
 .boxShadow p{
     font-size: 20px;
 }
 
+.gridbox-img{
+    height: 170px;
+    width: 170px;
+}
 
 
 
